# meteringvalues

./: .gitignore  CMakeLists.txt  README.md  compile.sh  meteringvalues_payload.json  vcpkg.json
include/message/: location.h  measurand.h  message_trigger_enum_type.h  meter_value.h  meter_values.h  phase.h  reading_context.h  response.h  response_wrapper.h  sampled_value.h  unit.h  value_format.h
include/utils/: deserializer.h  json_parser.h  string_utils.h  timestamp.h
include/visitor/: meter_value_printer.h  power_calculator.h  visitor_composite.h  visitor_facade.h
src/: main.cpp
src/utils/: json_parser.cpp  string_utils.cpp  timestamp.cpp
src/visitor/: meter_value_printer.cpp  power_calculator.cpp
test/: CMakeLists.txt
test/utils/: test_string_utils.cpp
test/visitor/: test_power_calculator.cpp
